--- a/i3status/config
+++ b/i3status/config
@@ -27,7 +27,7 @@ order += "memory"
 # order += "disk /home"
 # order += "ipv6"
 # order += "run_watch VPN"
-order += "ethernet enp0s3"
+order += "ethernet enp3s0"
 # order += "run_watch DHCP"
 order += "tztime localdate"
 order += "tztime localtime"
@@ -92,7 +92,7 @@ run_watch VPN {
 }
 
 
-ethernet enp0s3 {
+ethernet enp3s0 {
         # if you use %speed, i3status requires root privileges
         format_up = "<span color='#3498DB' size='large'>  </span> <span bgcolor='#3498DB' foreground='black'> %ip </span>"
         format_down = "<span color='#D32F2F'>  Not connected</span>"
@@ -108,6 +108,6 @@ load {
 }
 
 tztime localtime {
-        format = "<span color='#00dddd' size='large'>  </span> <span bgcolor='#00dddd' foreground='black'> %I:%M </span>"
+        format = "<span color='#00dddd' size='large'>  </span> <span bgcolor='#00dddd' foreground='black'> %H:%M </span>"
 }
 
